@@ -1,7 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
-    id 'me.julb.gradleplugins.java11'
+    id 'me.julb.gradleplugins.java17'
 	id 'me.julb.gradleplugins.additionaljars'
 }
 
@@ -26,13 +26,11 @@ dependencies {
 	testImplementation 'net.javacrumbs.json-unit:json-unit'
 }
 
-lombok {
-    config['lombok.log.fieldName'] = 'LOGGER'
-}
+
 
 test {
     useJUnitPlatform()
-    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF"]
+    jvmArgs = ["-Dlogging.level.root=OFF"]
 }
 
 publishing {
