@@ -1,28 +1,24 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
-    id 'me.julb.gradleplugins.java11'
+    id 'me.julb.gradleplugins.java17'
 	id 'me.julb.gradleplugins.additionaljars'
 }
 
 dependencies {
 	api platform(project(':bom'))
-	
-    api project(':libraries:library-utility-mapping')
 
-	implementation project(':libraries:library-dto-simple')
-	implementation 'org.springframework.boot:spring-boot-autoconfigure'
-	implementation 'org.springframework.data:spring-data-commons'
-	implementation 'ma.glasnost.orika:orika-core'
-}
-
-lombok {
-    config['lombok.log.fieldName'] = 'LOGGER'
+    implementation project(':libraries:library-dto-simple')
+    implementation project(':libraries:library-persistence-mongodb')
+    implementation 'org.springframework:spring-context'
+    implementation 'org.mapstruct:mapstruct'
+    
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Beta1'
 }
 
 test {
     useJUnitPlatform()
-    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
+    jvmArgs = ["-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 publishing {
