@@ -1,7 +1,7 @@
 plugins {
 	id 'java-library'
 	id 'io.freefair.lombok'
-    id 'me.julb.gradleplugins.java11'
+    id 'me.julb.gradleplugins.java17'
 	id 'me.julb.gradleplugins.additionaljars'
 }
 
@@ -23,7 +23,7 @@ dependencies {
 	api project(':libraries:library-utility-http')
     api project(':spring-boot-starters:spring-boot-starter-core')
 	api project(':spring-boot-starters:spring-boot-starter-security')
-    api project(':spring-boot-starters:spring-boot-starter-mapping')
+	api project(':spring-boot-starters:spring-boot-starter-mapping')
     api project(':spring-boot-starters:spring-boot-starter-opentracing')
     api project(':spring-boot-starters:spring-boot-starter-resource-types')
     api project(':spring-boot-starters:spring-boot-starter-validation')
@@ -42,13 +42,11 @@ dependencies {
 	testImplementation project(':spring-boot-starters:spring-boot-starter-test')
 }
 
-lombok {
-    config['lombok.log.fieldName'] = 'LOGGER'
-}
+
 
 test {
     useJUnitPlatform()
-    jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED", "-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
+    jvmArgs = ["-Dlogging.level.root=OFF", "-Dlogging.level.org.springframework=OFF"]
 }
 
 publishing {
